example/_k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    component: api
  ports:
  - port: 3000
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api
  labels:
    component: api
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: api
        image: ${registry}/api
        ports:
        - name: main-port
          containerPort: 3000
        volumeMounts:
        - name: api-secret-vol
          mountPath: "/run/secrets"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
      - name: api-secret-vol
        secret:
          secretName: api-secret
