example/_k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: app
spec:
  selector:
    component: gateway
  ports:
  - port: 3000
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gateway
  namespace: app
  labels:
    component: gateway
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: gateway
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
      - name: gateway
        image: ${registry}/gateway
        ports:
        - name: main-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
