example/_k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: app
spec:
  selector:
    component: web
  ports:
  - port: 3000
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: web
  namespace: app
  labels:
    component: web
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: web
        image: docker.for.mac.localhost:5000/web@sha256:b494d80bba772b252d82864a4db0655de40ab6c909ecac0cf36d60950c2f7350
        ports:
        - name: main-port
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /_health
            port: main-port
          initialDelaySeconds: 3
          periodSeconds: 3
