example/_k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: app
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.cluster.local
    http:
      paths:
      - path: /api
        backend:
          serviceName: gateway
          servicePort: 3000
      - path: /
        backend:
          serviceName: web
          servicePort: 3000
